# PCT_planner

./: .gitignore  NOTICE  README.md
planner/: build.sh  build_thirdparty.sh
planner/config/: __init__.py  param.py
planner/lib/: CMakeLists.txt  a_star.pyi  ele_planner.pyi  py_map_manager.pyi  traj_opt.pyi
planner/lib/src/a_star/: CMakeLists.txt  a_star_search.cc  a_star_search.h  python_interface.cc
planner/lib/src/common/: CMakeLists.txt  data_types.h
planner/lib/src/common/smoothing/: CMakeLists.txt  affine_constraint.cc  discrete_points_math.cc  osqp_spline1d_solver.cc  osqp_spline1d_solver.h  osqp_spline2d_solver.cc  polynomialxd.cc  spline1d_constraint.h  spline1d_kernel.cc  spline2d.cc  spline2d_constraint.cc  spline2d_kernel.cc
planner/lib/src/common/smoothing/solver/osqp/: osqp_interface.cc  osqp_sparse_matrix.h
planner/lib/src/common/smoothing/utils/: math.cc
planner/lib/src/ele_planner/: CMakeLists.txt  offline_ele_planner.cc  offline_ele_planner.h  python_interface.cc
planner/lib/src/map_manager/: CMakeLists.txt  dense_elevation_map.cc  dense_elevation_map.h  python_interface.cc
planner/lib/src/trajectory_optimization/: CMakeLists.txt  python_interface.cc
planner/lib/src/trajectory_optimization/gpmp_optimizer/: gpmp_optimizer.cc  gpmp_optimizer.h  gpmp_optimizer_prior_test.cc  gpmp_optimizer_wnoa.cc  gpmp_optimizer_wnoa.h
planner/lib/src/trajectory_optimization/gpmp_optimizer/factors/: gp_heading_rate_factor.cc  gp_heading_rate_factor.h  gp_interpolate_heading_rate_factor.cc  gp_interpolate_heading_rate_factor.h  gp_interpolate_obstacle_factor.cc  gp_interpolate_obstacle_factor.h  gp_obstacle_factor.cc  gp_obstacle_factor.h  gp_prior_factor.cc  gp_prior_factor.h
planner/lib/src/trajectory_optimization/gpmp_optimizer/factors_origin/: gp_prior_factor.cc  gp_prior_factor.h
planner/lib/src/trajectory_optimization/gpmp_optimizer/factors_wnoa/: gp_interpolate_obstacle_factor.cc  gp_interpolate_obstacle_factor.h  gp_obstacle_factor.cc  gp_obstacle_factor.h  gp_prior_factor.cc  gp_prior_factor.h
planner/lib/src/trajectory_optimization/gpmp_optimizer/interpolator/: wnoa_interpolator.hpp  wnoa_trajectory_interpolator.cc  wnoa_trajectory_interpolator.h  wnoj_interpolator.hpp  wnoj_trajectory_interpolator.cc  wnoj_trajectory_interpolator.h
planner/lib/src/trajectory_optimization/gpmp_optimizer/models/: wnoa.hpp  wnoa_origin.hpp  wnoj.hpp
planner/lib/src/trajectory_optimization/height_smoother/: height_smoother.cc  height_smoother.h  test_height_smoother.cc
planner/scripts/: plan.py  planner_wrapper.py
planner/scripts/utils/: __init__.py  convertion.py  vis_ros.py
rsc/rviz/: pct_ros.rviz
rsc/tomogram/: tomogram.txt
tomography/config/: __init__.py  param.py  prototype.py  scene.py  scene_building.py  scene_plaza.py  scene_spiral.py
tomography/scripts/: kernels.py  tomogram.py  tomography.py
